name:                framecsv
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dmvianna/framecsv#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Vianna
maintainer:          dmlvianna <at> gmail <dot> com
copyright:           2017 Daniel Vianna
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable framecsv
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
